--- a/buy.html
+++ b/buy.html
@@ -18,17 +18,15 @@
             background-size: cover;
             color: white;
             text-align: center;
-            overflow: hidden;
         }
 
         .wrapper {
             perspective: 1000px; /* Enable 3D perspective */
-            max-height: 90vh; /* Limit height for scrolling */
-            overflow-y: auto; /* Enable vertical scrolling */
             padding: 20px; /* Add some padding */
             background: rgba(0, 0, 0, 0.7); /* Background for content area */
             border-radius: 10px; /* Rounded corners */
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); /* Initial shadow */
+            display: inline-block; /* Ensure proper width */
         }
 
         .content {
@@ -72,9 +70,9 @@
             <h1>AK Admin: The Ultimate Roblox Command Tool</h1>
             <p><strong>Overview</strong></p>
             <p>"AK Admin" is a cutting-edge command tool for Roblox, designed to provide users with unmatched control, flexibility, and ease of use. It has quickly risen to become the best tool on the market, thanks to its robust features and reliability. AK Admin is crafted to meet the needs of all types of Roblox exploiters, ensuring the smooth running of any Roblox experience.</p>
-            <p>For more information on features, pricing, and usage, scroll down to explore everything AK Admin has to offer!</p>
-            <a href="https://discord.gg/bzRByg7xUw" target="_blank" class="buy-button">Buy AK Admin</a>
+            <p>For more information on features, pricing, and usage, explore everything AK Admin has to offer!</p>
         </div>
+        <a href="https://discord.gg/bzRByg7xUw" target="_blank" class="buy-button">Buy AK Admin</a>
     </div>
 
     <script>
