--- a/buy.html
+++ b/buy.html
@@ -70,10 +70,18 @@
             <h1>AK Admin: The Ultimate Roblox Command Tool</h1>
             <p><strong>Overview</strong></p>
             <p>"AK Admin" is a cutting-edge command tool for Roblox, designed to provide users with unmatched control, flexibility, and ease of use. It has quickly risen to become the best tool on the market, thanks to its robust features and reliability. AK Admin is crafted to meet the needs of all types of Roblox exploiters, ensuring the smooth running of any Roblox experience.</p>
-            <p>For more information on features, pricing, and usage, explore everything AK Admin has to offer!</p>
         </div>
-        <a href="https://discord.gg/bzRByg7xUw" target="_blank" class="buy-button">Buy AK Admin</a>
     </div>
+
+        <div class="wrapper">
+        <div class="buybutton" id="content">
+
+            <p>Click below to join an buy the AK ADMIN Script!</p>
+            <p>Or click the prices button to view our prices!</p>
+             <a href="https://discord.gg/bzRByg7xUw" target="_blank" class="buy-button">Buy AK Admin</a>
+        </div>
+    </div>
+    <a href="https://discord.gg/bzRByg7xUw" target="_blank" class="buy-button">Buy AK Admin</a>
 
     <script>
         const content = document.getElementById('content');
