--- a/buy.html
+++ b/buy.html
@@ -74,7 +74,7 @@
     </div>
 
         <div class="wrapper">
-        <div class="buybutton" id="content">
+        <div class="buybutton" id="buybtn">
 
             <p>Click below to join an buy the AK ADMIN Script!</p>
             <p>Or click the prices button to view our prices!</p>
