--- a/prices.html
+++ b/prices.html
@@ -22,7 +22,7 @@
         }
         .price-item {
             margin: 10px 0;
-            font-size: 1.2em;
+            font-size: 1.5em; /* Increased font size */
         }
     </style>
 </head>
@@ -30,7 +30,6 @@
 
     <h1>PRICES</h1>
     <div class="price-list">
-        <h2>Normal Prices:</h2>
         <div class="price-item">• 12€ Paypal (Family And Friends Only)</div>
         <div class="price-item">• 900 ROBUX</div>
     </div>
