--- a/prices.html
+++ b/prices.html
@@ -7,17 +7,18 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #1c1c1c; /* Dark background */
+            color: white; /* White text */
             margin: 0;
             padding: 20px;
         }
         h1 {
-            color: #333;
+            color: #ffffff; /* White color for heading */
         }
         .price-list {
-            background-color: #fff;
+            background-color: #2a2a2a; /* Slightly lighter dark background for the price list */
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
             padding: 20px;
         }
         .price-item {
