--- a/buy.html
+++ b/buy.html
@@ -115,12 +115,10 @@
             const centerX = width / 2;
             const centerY = height / 2;
 
-            // Calculate rotation based on mouse position
-            const rotateX = ((offsetY - centerY) / height) * 15; // Increased sensitivity
-            const rotateY = -((offsetX - centerX) / width) * 15; // Increased sensitivity
-
-            // Apply the transformation with more downward movement
-            const translateY = ((offsetY - centerY) / height) * 30; // Increased downward movement
+            // Adjust sensitivity for less movement
+            const rotateX = ((offsetY - centerY) / height) * 5; // Reduced sensitivity
+            const rotateY = -((offsetX - centerX) / width) * 5; // Reduced sensitivity
+            const translateY = ((offsetY - centerY) / height) * 10; // Reduced downward movement
 
             // Apply the transformation
             content.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) translateY(${translateY}px)`;
