--- a/buy.html
+++ b/buy.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AK Admin: The Ultimate Roblox Command Tool</title>
+    <title>Buy AK Admin</title> <!-- Updated title -->
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1174404879545012275/1290061529680445561/IMG_0062.png?ex=66fd112c&is=66fbbfac&hm=01016e1014c200a554c70d5c1ffb5d3f23af9b5afc35f54132fc9da27caae8b6" type="image/png"> <!-- Favicon link -->
     <style>
         body {
             margin: 0;
