--- a/prices.html
+++ b/prices.html
@@ -26,14 +26,30 @@
             margin: 10px 0;
             font-size: 1.5em; /* Increased font size */
         }
+        .paypal-icon {
+            width: 24px; /* Set the width of the PayPal icon */
+            vertical-align: middle; /* Align icon with text */
+            margin-right: 8px; /* Space between icon and text */
+        }
+        .robux-icon {
+            width: 24px; /* Set the width of the Robux icon */
+            vertical-align: middle; /* Align icon with text */
+            margin-right: 8px; /* Space between icon and text */
+        }
     </style>
 </head>
 <body>
 
     <h1>PRICES</h1>
     <div class="price-list">
-        <div class="price-item">• 12€ Paypal (Family And Friends Only)</div>
-        <div class="price-item">• 900 ROBUX</div>
+        <div class="price-item">
+            <img src="https://cdn.iconscout.com/icon/free/png-256/free-paypal-5-226456.png?f=webp" alt="PayPal Icon" class="paypal-icon"> <!-- PayPal icon -->
+            • 12€ Paypal (Family And Friends Only)
+        </div>
+        <div class="price-item">
+            <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
+            • 900 ROBUX
+        </div>
     </div>
 
 </body>
