--- a/prices.html
+++ b/prices.html
@@ -43,7 +43,7 @@
     <h1>PRICES</h1>
     <div class="price-list">
         <div class="price-item">
-            <img src="https://cdn.iconscout.com/icon/free/png-256/free-paypal-5-226456.png?f=webp" alt="PayPal Icon" class="paypal-icon"> <!-- PayPal icon -->
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
             • 12€ Paypal (Family And Friends Only)
         </div>
         <div class="price-item">
