--- a/supported.html
+++ b/supported.html
@@ -7,15 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
+            background-color: #121212;
+            color: #ffffff;
             margin: 0;
             padding: 20px;
         }
         h1 {
-            color: #333;
-        }
-        h2 {
-            color: #4CAF50;
+            color: #ffffff;
         }
         table {
             width: 100%;
@@ -23,16 +21,16 @@
             margin-top: 20px;
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #444;
             padding: 8px;
             text-align: left;
         }
         th {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #1e1e1e;
+            color: #ffffff;
         }
         tr:hover {
-            background-color: #f1f1f1;
+            background-color: #333;
         }
         .green-dot {
             color: #4CAF50;
@@ -43,11 +41,10 @@
 
     <h1>Supported Executors</h1>
 
-    <h2>Mobile:</h2>
     <table>
         <thead>
             <tr>
-                <th>Executor Name</th>
+                <th>Mobile Executors</th>
             </tr>
         </thead>
         <tbody>
@@ -75,11 +72,10 @@
         </tbody>
     </table>
 
-    <h2>PC:</h2>
     <table>
         <thead>
             <tr>
-                <th>Executor Name</th>
+                <th>PC Executors</th>
             </tr>
         </thead>
         <tbody>
