--- a/supported.html
+++ b/supported.html
@@ -15,6 +15,9 @@
         h1 {
             color: #ffffff;
         }
+        h2 {
+            color: #4CAF50;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -35,11 +38,28 @@
         .green-dot {
             color: #4CAF50;
         }
+        .orange-dot {
+            color: #FFA500;
+        }
+        .red-dot {
+            color: #FF0000;
+        }
+        .question-dot {
+            color: #FFFF00;
+        }
     </style>
 </head>
 <body>
-
+    <h5>If you try running the script and it works and the executor isn't listed here then dm one of the owner that it works so we can add it</h5>
     <h1>Supported Executors</h1>
+    
+    <h2>Meaning of Emojis</h2>
+    <ul>
+        <li><span class="green-dot">🟢</span> = can run script</li>
+        <li><span class="orange-dot">🟠</span> = can maybe run script</li>
+        <li><span class="question-dot">❓</span> = haven't tested</li>
+        <li><span class="red-dot">🔴</span> = can't run script</li>
+    </ul>
 
     <table>
         <thead>
@@ -49,13 +69,13 @@
         </thead>
         <tbody>
             <tr>
-                <td>Hydrogen <span class="green-dot">🟢</span></td>
+                <td>Hydrogen <span class="green-dot">❓</span></td>
             </tr>
             <tr>
-                <td>Evon <span class="green-dot">🟢</span></td>
+                <td>Evon <span class="green-dot">❓</span></td>
             </tr>
             <tr>
-                <td>Acreus X Neo <span class="green-dot">🟢</span></td>
+                <td>Acreus X Neo <span class="green-dot">❓</span></td>
             </tr>
             <tr>
                 <td>Codex <span class="green-dot">🟢</span></td>
@@ -67,7 +87,7 @@
                 <td>Apple-ware <span class="green-dot">🟢</span></td>
             </tr>
             <tr>
-                <td>VegaX <span class="green-dot">🟢</span></td>
+                <td>VegaX <span class="green-dot">❓</span></td>
             </tr>
         </tbody>
     </table>
@@ -80,10 +100,10 @@
         </thead>
         <tbody>
             <tr>
-                <td>Seliware <span class="green-dot">🟢</span></td>
+                <td>Seliware <span class="green-dot">❓</span></td>
             </tr>
             <tr>
-                <td>Xeno <span class="green-dot">🟢</span></td>
+                <td>Xeno <span class="green-dot">❓</span></td>
             </tr>
             <tr>
                 <td>Wave <span class="green-dot">🟢</span></td>
@@ -92,16 +112,16 @@
                 <td>Synapse z <span class="green-dot">🟢</span></td>
             </tr>
             <tr>
-                <td>Solara <span class="green-dot">🟢</span></td>
+                <td>Solara <span class="green-dot">🟠</span></td>
             </tr>
             <tr>
-                <td>JJsploit <span class="green-dot">🟢</span></td>
+                <td>JJsploit <span class="green-dot">🟠</span></td>
             </tr>
             <tr>
-                <td>Zorara <span class="green-dot">🟢</span></td>
+                <td>Zorara <span class="green-dot">🔴</span></td>
             </tr>
             <tr>
-                <td>Celery <span class="green-dot">🟢</span></td>
+                <td>Celery <span class="green-dot">❓</span></td>
             </tr>
         </tbody>
     </table>
