--- a/supported.html
+++ b/supported.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <h5>If you try running the script and it works and the executor isn't listed here then dm one of the owner that it works so we can add it</h5>
+    <h3>If you try running the script and it works and the executor isn't listed here then dm one of the owners that it works so we can add it</h3>
     <h1>Supported Executors</h1>
     
     <h2>Meaning of Emojis</h2>
