--- a/supported.html
+++ b/supported.html
@@ -123,6 +123,9 @@
             <tr>
                 <td>Celery <span class="green-dot">❓</span></td>
             </tr>
+            <tr>
+                <td>Macsploit <span class="green-dot">❓</span></td>
+            </tr>
         </tbody>
     </table>
 
