--- a/supported.html
+++ b/supported.html
@@ -64,7 +64,7 @@
     <table>
         <thead>
             <tr>
-                <th>Mobile Executors</th>
+                <th>Android Executors</th>
             </tr>
         </thead>
         <tbody>
@@ -128,6 +128,33 @@
             </tr>
         </tbody>
     </table>
-
+      <table>
+        <thead>
+            <tr>
+                <th>PC Executors</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Delta <span class="green-dot">🟢</span></td>
+            </tr>
+            <tr>
+                <td>Apple-ware <span class="green-dot">🟢</span></td>
+            </tr>
+        </tbody>
+    </table>
+  <table>
+        <thead>
+            <tr>
+                <th>Mac OS Executors</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Macsploit <span class="green-dot">❓</span></td>
+            </tr>
+        </tbody>
+    </table>
+    
 </body>
 </html>
