--- a/supported.html
+++ b/supported.html
@@ -131,7 +131,7 @@
       <table>
         <thead>
             <tr>
-                <th>PC Executors</th>
+                <th>IOS Executors</th>
             </tr>
         </thead>
         <tbody>
