--- a/supported.html
+++ b/supported.html
@@ -72,22 +72,19 @@
                 <td>Hydrogen <span class="green-dot">❓</span></td>
             </tr>
             <tr>
-                <td>Evon <span class="green-dot">❓</span></td>
+                <td>Evon <span class="green-dot">❓</span> <a href="https://sakpot.com/android-evon-mobile-executor-roblox-download/">Download</a></td> 
             </tr>
             <tr>
-                <td>Acreus X Neo <span class="green-dot">❓</span></td>
+                <td>Acreus X Neo <span class="green-dot">❓</span> <a href="https://spdmteam.com/index?os=android">Download</a></td>
             </tr>
             <tr>
-                <td>Codex <span class="green-dot">🟢</span></td>
+                <td>Codex <span class="green-dot">🟢</span> <a href="https://codex.lol/android">Download</a></td>
             </tr>
             <tr>
-                <td>Delta <span class="green-dot">🟢</span></td>
+                <td>Delta <span class="green-dot">🟢</span> <a href="https://deltaexploits.gg/delta-executor-mobile">Download</a></td>
             </tr>
             <tr>
-                <td>Apple-ware <span class="green-dot">🟢</span></td>
-            </tr>
-            <tr>
-                <td>VegaX <span class="green-dot">❓</span></td>
+                <td>VegaX <span class="green-dot">❓</span> <a href="https://www.vegax.gg/">Download</a></td>
             </tr>
         </tbody>
     </table>
@@ -100,31 +97,28 @@
         </thead>
         <tbody>
             <tr>
-                <td>Seliware <span class="green-dot">❓</span></td>
+                <td>Seliware <span class="green-dot">❓</span> <a href="https://seliware.com/">Download</a></td>
             </tr>
             <tr>
                 <td>Xeno <span class="green-dot">❓</span></td>
             </tr>
             <tr>
-                <td>Wave <span class="green-dot">🟢</span></td>
+                <td>Wave <span class="green-dot">🟢</span> <a href="https://getwave.gg/">Download</a></td>
             </tr>
             <tr>
-                <td>Synapse z <span class="green-dot">🟢</span></td>
+                <td>Synapse z <span class="green-dot">🟢</span> <a href="https://synapsez.net/">Download</a></td>
             </tr>
             <tr>
-                <td>Solara <span class="green-dot">🟠</span></td>
+                <td>Solara <span class="green-dot">🟠</span> <a href="https://getsolara.dev/">Download</a></td>
             </tr>
             <tr>
-                <td>JJsploit <span class="green-dot">🟠</span></td>
+                <td>JJsploit <span class="green-dot">🟠</span> <a href="https://wearedevs.net/dInfo/JJSploit">Download</a></td>
             </tr>
             <tr>
-                <td>Zorara <span class="green-dot">🔴</span></td>
+                <td>Zorara <span class="green-dot">🔴</span> <a href="https://wearedevs.net/d/Zorara">Download</a></td>
             </tr>
             <tr>
                 <td>Celery <span class="green-dot">❓</span></td>
-            </tr>
-            <tr>
-                <td>Macsploit <span class="green-dot">❓</span></td>
             </tr>
         </tbody>
     </table>
@@ -136,10 +130,13 @@
         </thead>
         <tbody>
             <tr>
-                <td>Delta <span class="green-dot">🟢</span></td>
+                <td>Delta <span class="green-dot">🟢</span> <a href="https://deltaexploits.gg/delta-executor-ios">Download</a></td>
             </tr>
             <tr>
-                <td>Apple-ware <span class="green-dot">🟢</span></td>
+                <td>Apple-ware <span class="green-dot">🟢</span> <a href="https://appleware.dev/">Download</a></td>
+            </tr>
+            <tr>
+                <td>Acreus X Neo <span class="green-dot">❓</span> <a href="https://spdmteam.com/index?os=ios">Download</a></td>
             </tr>
         </tbody>
     </table>
@@ -151,7 +148,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Macsploit <span class="green-dot">❓</span></td>
+                <td>Macsploit <span class="green-dot">❓</span> <a href="https://abyssdigital.mysellix.io/">Download</a> <a href="discord.gg/macsploit">Discord</a></td>
             </tr>
         </tbody>
     </table>
