--- a/supported.html
+++ b/supported.html
@@ -148,7 +148,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Macsploit <span class="green-dot">❓</span> <a href="https://abyssdigital.mysellix.io/">Download</a> <a href="discord.gg/macsploit">Discord</a></td>
+                <td>Macsploit <span class="green-dot">❓</span> <a href="https://abyssdigital.mysellix.io/">Download</a> <a href="https://discord.com/invite/macsploit">Discord</a></td>
             </tr>
         </tbody>
     </table>
