--- a/supported.html
+++ b/supported.html
@@ -133,7 +133,7 @@
                 <td>Delta <span class="green-dot">🟢</span> <a href="https://deltaexploits.gg/delta-executor-ios">Download</a></td>
             </tr>
             <tr>
-                <td>Apple-ware <span class="green-dot">🟢</span> <a href="https://appleware.dev/">Download</a></td>
+                <td>Apple-ware <span class="green-dot">🟠</span> <a href="https://appleware.dev/">Download</a></td>
             </tr>
             <tr>
                 <td>Acreus X Neo <span class="green-dot">❓</span> <a href="https://spdmteam.com/index?os=ios">Download</a></td>
