--- a/supported.html
+++ b/supported.html
@@ -97,10 +97,10 @@
         </thead>
         <tbody>
             <tr>
-                <td>Seliware <span class="green-dot">❓</span> <a href="https://seliware.com/">Download</a></td>
+                <td>Seliware <span class="green-dot">🟢</span> <a href="https://seliware.com/">Download</a></td>
             </tr>
             <tr>
-                <td>Xeno <span class="green-dot">❓</span></td>
+                <td>Xeno <span class="green-dot">🔴</span></td>
             </tr>
             <tr>
                 <td>Wave <span class="green-dot">🟢</span> <a href="https://getwave.gg/">Download</a></td>
@@ -109,10 +109,10 @@
                 <td>Synapse z <span class="green-dot">🟢</span> <a href="https://synapsez.net/">Download</a></td>
             </tr>
             <tr>
-                <td>Solara <span class="green-dot">🟠</span> <a href="https://getsolara.dev/">Download</a></td>
+                <td>Solara <span class="green-dot">🔴</span> <a href="https://getsolara.dev/">Download</a></td>
             </tr>
             <tr>
-                <td>JJsploit <span class="green-dot">🟠</span> <a href="https://wearedevs.net/dInfo/JJSploit">Download</a></td>
+                <td>JJsploit <span class="green-dot">🔴</span> <a href="https://wearedevs.net/dInfo/JJSploit">Download</a></td>
             </tr>
             <tr>
                 <td>Zorara <span class="green-dot">🔴</span> <a href="https://wearedevs.net/d/Zorara">Download</a></td>
@@ -133,10 +133,10 @@
                 <td>Delta <span class="green-dot">🟢</span> <a href="https://deltaexploits.gg/delta-executor-ios">Download</a></td>
             </tr>
             <tr>
-                <td>Apple-ware <span class="green-dot">🟠</span> <a href="https://appleware.dev/">Download</a></td>
+                <td>Apple-ware <span class="green-dot">🟢</span> <a href="https://appleware.dev/">Download</a></td>
             </tr>
             <tr>
-                <td>Acreus X Neo <span class="green-dot">❓</span> <a href="https://spdmteam.com/index?os=ios">Download</a></td>
+                <td>Acreus X Neo <span class="green-dot">🟢</span> <a href="https://spdmteam.com/index?os=ios">Download</a></td>
             </tr>
         </tbody>
     </table>
