--- a/prices.html
+++ b/prices.html
@@ -43,12 +43,15 @@
     <h1>PRICES</h1>
     <div class="price-list">
         <div class="price-item">
+            • Halloween sale 🎃
+
+            
             <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
-            • 12€ Paypal (Family And Friends Only)
+            • 8€ Paypal (Family And Friends Only)
         </div>
         <div class="price-item">
             <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
-            • 900 ROBUX
+            • 400 ROBUX
         </div>
     </div>
 
