--- a/prices.html
+++ b/prices.html
@@ -44,7 +44,7 @@
     <div class="price-list">
         <div class="price-item">
             • Halloween sale 🎃
-
+  </div>
             
             <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
             • 8€ Paypal (Family And Friends Only)
