--- a/prices.html
+++ b/prices.html
@@ -41,17 +41,17 @@
 <body>
 
     <h1>PRICES</h1>
+    <h1>            • Halloween sale 🎃</h1>
     <div class="price-list">
         <div class="price-item">
-            • Halloween sale 🎃
-  </div>
+
             
             <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
             • 8€ Paypal (Family And Friends Only)
         </div>
         <div class="price-item">
             <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
-            • 400 ROBUX
+            • 400 ROBUX (https://www.roblox.com/catalog/101120969629293)
         </div>
     </div>
 
