--- a/prices.html
+++ b/prices.html
@@ -41,18 +41,18 @@
 <body>
 
     <h1>PRICES</h1>
-    <h1>            • Halloween sale 🎃</h1>
+    <h1>             Halloween sale 🎃</h1>
     <div class="price-list">
         <div class="price-item">
+<div class="price-item">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
+    • 8€ Paypal (Family And Friends Only) (<a href="https://www.paypal.me/AliKhammas143" style="color: white; text-decoration: underline;" target="_blank">Click here to pay</a>)
+</div>
 
-            
-            <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
-            • 8€ Paypal (Family And Friends Only)
-        </div>
-        <div class="price-item">
-            <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
-            • 400 ROBUX (https://www.roblox.com/catalog/101120969629293)
-        </div>
+<div class="price-item">
+    <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
+    • 400 ROBUX (<a href="https://www.roblox.com/catalog/101120969629293" style="color: white; text-decoration: underline;" target="_blank">Click here to buy</a>)
+</div
     </div>
 
 </body>
