--- a/prices.html
+++ b/prices.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AK Admin Prices</title> <!-- Updated title -->
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/1174404879545012275/1290061529680445561/IMG_0062.png?ex=66fd112c&is=66fbbfac&hm=01016e1014c200a554c70d5c1ffb5d3f23af9b5afc35f54132fc9da27caae8b6" type="image/png"> <!-- Favicon link -->
+    <title>AK Admin Prices</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1174404879545012275/1290061529680445561/IMG_0062.png?ex=66fd112c&is=66fbbfac&hm=01016e1014c200a554c70d5c1ffb5d3f23af9b5afc35f54132fc9da27caae8b6" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1c1c1c; /* Dark background */
+            background: linear-gradient(135deg, #2c3e50, #4ca1af); /* Dark gradient background */
             color: white; /* White text */
             margin: 0;
             padding: 20px;
@@ -17,9 +17,9 @@
             color: #ffffff; /* White color for heading */
         }
         .price-list {
-            background-color: #2a2a2a; /* Slightly lighter dark background for the price list */
+            background-color: rgba(42, 42, 42, 0.9); /* Slightly transparent dark background for the price list */
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
             padding: 20px;
         }
         .price-item {
@@ -44,15 +44,13 @@
     <h1>             Halloween sale 🎃</h1>
     <div class="price-list">
         <div class="price-item">
-<div class="price-item">
-    <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
-    • 8€ Paypal (Family And Friends Only) (<a href="https://www.paypal.me/AliKhammas143" style="color: white; text-decoration: underline;" target="_blank">Click here to pay</a>)
-</div>
-
-<div class="price-item">
-    <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
-    • 400 ROBUX (<a href="https://www.roblox.com/catalog/101120969629293" style="color: white; text-decoration: underline;" target="_blank">Click here to buy</a>)
-</div
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="paypal-icon"> <!-- Updated PayPal icon -->
+            • 8€ Paypal (Family And Friends Only) (<a href="https://www.paypal.me/AliKhammas143" style="color: white; text-decoration: underline;" target="_blank">Click here to pay</a>)
+        </div>
+        <div class="price-item">
+            <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="robux-icon"> <!-- Robux icon -->
+            • 400 ROBUX (<a href="https://www.roblox.com/catalog/101120969629293" style="color: white; text-decoration: underline;" target="_blank">Click here to buy</a>)
+        </div>
     </div>
 
 </body>
