--- a/prices.html
+++ b/prices.html
@@ -8,8 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('https://cdn.pixabay.com/photo/2017/09/26/18/06/halloween-2787453_1280.jpg') no-repeat center center fixed; /* Halloween background image */
-            background-size: cover; /* Cover the entire background */
+            background: linear-gradient(135deg, #ff8c00, #000000); /* Orange to Black gradient */
             color: white; /* White text */
             margin: 0;
             padding: 20px;
